[package]
name = "pyo3-decimal"
version = "0.1.0"
authors = ["fx kirin <fx.kirin@gmail.com>"]
edition = "2018"

[lib]
name = "pyo3_decimal"
crate-type = ["cdylib"]

[dependencies]
pyo3_decimal_macro = { path = "../pyo3_decimal_macro" }
rust_decimal = "1.23.1"
fxhash = "0.2.1"
once_cell = "1.10.0"
gdb_breakpoint = "0.1.6"
num-runtime-fmt = "0.1.2"

[dependencies.pyo3]
version = "0.16.4"
features = ["extension-module"]

[build-dependencies]
built = "0.5.1"
pyo3_decimal_macro = { path = "../pyo3_decimal_macro" }
